# termpdf.py

./: init.sh  pyproject.toml
termpdf/: __main__.py
