[tool.poetry]
name = "termpdf-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "termpdf"}]

[tool.poetry.dependencies]
python = "~3.13"
pymupdf = "^1.21.1"
pdfrw = "^0.4"
pyperclip = "^1.8.2"
pybtex = "^0.24.0"
pynvim = "^0.4.3"
roman = "^3.3"
pagelabels = "^1.2.0"
setuptools = "^75.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
